tests/fixtures/invalid/string-no-quotes-in-inline-table.stderr
TOML parse error at line 1, column 17
  |
1 | value = { key = ZZZ }
  |                 ^
Unexpected `Z`
Expected quoted string
